# modular_collatz

./: Collatz.ipynb  LICENSE  README.md  pyproject.toml
notebooks/: Collatz.ipynb  Collatz_plots.ipynb
scripts/: README.md  run_examples.py
src/modular_collatz/: __init__.py  cli.py  core.py
tests/: test_core.py
